--- a/疫情填报系统前端/miniprogram/pages/NI-SJ/NI-SJ.wxml
+++ b/疫情填报系统前端/miniprogram/pages/NI-SJ/NI-SJ.wxml
@@ -31,4 +31,22 @@
       <view class="td">{{item.detail.suspect}}</view>
     </view>
   </block>
+  <view class="tr bg-g">
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+ </view>
+  <view class="tr bg-g">
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+ </view>
 </view>
