解决北京无法显示的问题

--- a/疫情填报系统前端/miniprogram/pages/NI-SJ/NI-SJ.wxml
+++ b/疫情填报系统前端/miniprogram/pages/NI-SJ/NI-SJ.wxml
@@ -11,6 +11,15 @@
     <view class="th">治愈</view>
     <view class="th">疑似</view>
   </view>
+    <view class="tr bg-g">
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+      <view class="td"></view>
+ </view>
   <block wx:for="{{listData}}" wx:key="province">
     <view class="tr bg-g" wx:if="{{index % 2 == 0}}">
       <view class="td">{{item.detail.name}}</view>
