--- a/疫情填报系统前端/miniprogram/pages/ALI-YQTB/ALI-YQTB.wxml
+++ b/疫情填报系统前端/miniprogram/pages/ALI-YQTB/ALI-YQTB.wxml
@@ -1,33 +1,42 @@
 <!--pages/log/log.wxml-->
-<view class="container">
+<view class="container1">
+  <text class="mytext">疫情填报</text>
     <form>
-      <view class="section">身份证号:</view>
-      <input type="text" class="input" name="IDNum" id="IDNum" placeholder="请输入身份证号" bindinput="setIDNum" />
-      <view class="section">手机号:</view>
-      <input type="text" class="input" name="PhoneNum" id="PhoneNum" placeholder="请输入手机号" bindinput="setPhoneNum" />
-      <view class="section">地区:</view>
+      <view class="section">身份证号</view>
+      <view class="input-text">
+      <input type="text" class="input-text1" name="IDNum" id="IDNum" placeholder="身份证号" bindinput="setIDNum" />
+      </view>
+      <view class="section">手机号</view>
+      <view class="input-text">
+      <input type="text" class="input-text1" name="PhoneNum" id="PhoneNum" placeholder="手机号" bindinput="setPhoneNum" />
+      </view>
+      <view class="section">地区</view>
+      <view class="input-text">
   <picker mode="region" bindchange="bindRegionChange" value="{{region}}" custom-item="{{customItem}}">
-    <view class="picker">
-      {{region[0]}}，{{region[1]}}，{{region[2]}}
-    </view>
+    <view class="input-text1">
+      {{region[0]}}-{{region[1]}}-{{region[2]}}
+    </view> 
   </picker>
-      <view class="section">地址:</view>
-      <input type="text" class="input" name="Pos" id="Pos" placeholder="请输入地址" bindinput="setPos" />
-      <view class="section">健康状况:</view>
-      <radio-group bindchange="setPerStatus">
+  </view>
+      <view class="section">地址</view>
+      <view class="input-text">
+      <input type="text" class="input-text1" name="Pos" id="Pos" placeholder="请输入地址" bindinput="setPos" />
+      </view>
+      <view class="section">健康状况</view>
+      <radio-group bindchange="setPerStatus" class="radio">
         <label>
-          <radio value="0">疑似</radio>
+          <radio value="0" class="ys">疑似</radio>
         </label>
         <label>
-          <radio value="1">确诊</radio>
+          <radio value="1"class="qz">确诊</radio>
         </label>
         <label>
-          <radio value="2">痊愈</radio>
+          <radio value="2"class="qy">痊愈</radio>
         </label>
         <label>
-          <radio value="3">死亡</radio>
+          <radio value="3"class="sw">死亡</radio>
         </label>
       </radio-group>
-      <button form-type="submit" class="button" bindtap="fromsubmit">提交</button>
+      <button form-type="submit" class="button" hover-class="mybutton-hover"  bindtap="fromsubmit">提交</button>
     </form>
 </view>
