--- a/疫情填报系统前端/miniprogram/pages/ALI-ZDXJ/ALI-ZDXJ.wxml
+++ b/疫情填报系统前端/miniprogram/pages/ALI-ZDXJ/ALI-ZDXJ.wxml
@@ -1,17 +1,26 @@
-<view class="container">
+<view class="container1">
+  <text class="mytext">指派下级管理</text>
     <form>
-      <view class="section">姓名:</view>
-      <input type="text" class="input" name="name" id="name" placeholder="请输入姓名" bindinput="setname" />
-      <view class="section">身份证号:</view>
-      <input type="text" class="input" name="IDNum" id="IDNum" placeholder="请输入身份证号" bindinput="setIDNum" />
-      <view class="section">地区:</view>
+      <view class="section">姓名</view>
+      <view class="input-text">
+      <input type="text" class="input-text1" name="name" id="name" placeholder="请输入姓名" bindinput="setname" />
+      </view>
+      <view class="section">身份证号</view>
+      <view class="input-text">
+      <input type="text" class="input-text1" name="IDNum" id="IDNum" placeholder="请输入身份证号" bindinput="setIDNum" />
+      </view>
+      <view class="section">地区</view>
+      <view class="input-text">
       <picker mode="region" bindchange="bindRegionChange" value="{{region}}" custom-item="{{customItem}}">
-        <view class="picker">
-          {{region1[0]}}，{{region1[1]}}，{{region1[2]}}
+        <view class="input-text1">
+          {{region1[0]}}-{{region1[1]}}-{{region1[2]}}
         </view>
       </picker>
-      <view class="section">手机号:</view>
-      <input type="text" class="input" name="PhoneNum" id="PhoneNum" placeholder="请输入手机号" bindinput="setPhoneNum" />
-      <button form-type="submit" class="button" bindtap="fromsubmit">提交</button>
+      </view>
+      <view class="section">手机号</view>
+      <view class="input-text">
+      <input type="text" class="input-text1" name="PhoneNum" id="PhoneNum" placeholder="请输入手机号" bindinput="setPhoneNum" />
+      </view>
+      <button form-type="submit" class="button" hover-class="mybutton-hover" bindtap="fromsubmit">提交</button>
     </form>
 </view>
