--- a/疫情填报系统前端/miniprogram/pages/ALI/ALI.wxss
+++ b/疫情填报系统前端/miniprogram/pages/ALI/ALI.wxss
@@ -1,20 +1,34 @@
 /* pages/ALI/ALI.wxss */
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin:50rpx;
-  margin-top: 50rpx;
+.mybutton{
+  background-color: #ffffff;
+  color: #F25F5C;
+  border: 5rpx solid #F25F5C; 
+  margin: 50rpx;
+  border-radius: 110rpx;  
 }
-.userinfo1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin:50rpx;
+.mybutton-hover{
+  color: #ffffff;
+  background-color: #F25F5C;
+  border: 5rpx solid #F25F5C; 
+  margin: 50rpx;
+  border-radius: 110rpx;  
 }
-.userinfo2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin:50rpx;
+.mytext{
+  color: #F25F5C;
+  font-size: 70rpx;
+  font-weight: bold;
+  display:flex; 
+  padding-bottom: 100rpx;
+  justify-content:center;
 }
+.myimage{
+  position:fixed; 
+  bottom:10rpx;
+  right: 0;
+  height: 508rpx;
+  width: 412rpx;
+}
+.container1{
+  background-color:#ffffff;
+  padding-top: 200rpx;
+} 
