--- a/疫情填报系统前端/miniprogram/pages/NI-SJ/NI-SJ.wxss
+++ b/疫情填报系统前端/miniprogram/pages/NI-SJ/NI-SJ.wxss
@@ -20,12 +20,12 @@
   top:0;
 }
 .bg-g{
-  background: #E6F3F9;
+  background: #f7d7d6;
 }
 .th {
   width: 40%;
   justify-content: center;
-  background: rgb(160, 179, 238);
+  background: #f25f5c;
   color: #fff;
   display: flex;
   height: 3rem;
