--- a/疫情填报系统前端/miniprogram/pages/NI-ZX/NI-ZX.wxss
+++ b/疫情填报系统前端/miniprogram/pages/NI-ZX/NI-ZX.wxss
@@ -6,7 +6,8 @@
   height: 80%;
 }
 .title{
-  font-size: 25px;
+  font-size: 60rpx;
+  color: #f25f5c;
   display: flex;
   flex-direction: column;
   justify-content:space-around;
