--- a/疫情填报系统前端/miniprogram/pages/NI/NI.wxss
+++ b/疫情填报系统前端/miniprogram/pages/NI/NI.wxss
@@ -1,51 +1,53 @@
 /* components/dailyData.wxss */
 
 .layoutDailyleft{
-  background-color: #3370c0;
-  display: flex;
-  flex-direction: column;
-  justify-content:space-around;
-  height: 90%;
-  width: 100%;
-  padding-left: 20rpx;
+  background-color: #ffffff;
+  height: 65%;
   font-weight: 700;
 }
 .layoutDailyleft .title{
-  font-size: 25px;
-
+  font-size: 60rpx;
+  color: #f25f5c;
 }
 .layoutDailyleftText{
-  font-size: 20px;
+  height: 10%;
+  font-size: 50rpx;
   display: flex;
-  align-items: flex-end;
+  padding-left: 20rpx;
+  margin-left: 50rpx; 
+  margin-top: 100rpx;
+  align-items: center;
 }
-.layoutDailyleftText .text{
-  font-size: 13px;
-}
+
 .layoutDailyleftText .thanYes{
-  font-size: 10px;
-  color: #dadada;
+  font-size: 45rpx;
   padding-left: 5px;
 }
-.layoutDailyleft .error{
-  color: rgb(235, 164, 72);
-}
+
 .layoutDailyleft .danger{
-  color: #F56C6C;
+  color: #f25f5c;
+  background-color: #fcd5d3;
+  border-left: 5rpx  solid #F25F5C;
 }
 .layoutDailyleft .warn{
-  color: rgb(230, 176, 96);
+  color: #ffe066;
+  background-color: #fffae3;
+  border-left: 5rpx  solid #ffe066;
 }
 .layoutDailyleft .dethod{
-  color: #909399;
+  color: #535452;
+  background-color: #e8e8e8;
+   border-left: 5rpx  solid #535452;
 }
 .layoutDailyleft .curd{
-  color: #67C23A;
+  color: #70c1b3;
+  background-color: #def1ee;
+  border-left: 5rpx  solid #70c1b3;
 }
-.layoutDailyRight{
-  width: 700rpx;
-  font-weight: 200;
-  display: flex;
-  justify-content: flex-end;
-  font-size: 10px;
+.myimage{
+  position:fixed; 
+  bottom:10%;
+  right: 0;
+  height: 25%;
+  width: 50%;
 }
