--- a/疫情填报系统前端/miniprogram/pages/login/login.wxml
+++ b/疫情填报系统前端/miniprogram/pages/login/login.wxml
@@ -1,18 +1,15 @@
-<view class="container">
-      <view class="userinfo">
-        <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-        <block wx:else>
-          <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-          <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-        </block>
-      </view>
-    <view>
+<view class="container1">
+  <text class="mytext">管理人员登陆</text>
+  <image class="userinfo-avatar1" src="{{userpng}}"></image>
+  <text class="userinfo-nickname">{{username}}</text>
+  <button class="button" hover-class="mybutton-hover" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <form>
-      <view class="section">身份证号:</view>
-      <input type="text" class="input" name="IDNum" id="IDNum" placeholder="请输入身份证号" bindinput="setIDNum" />
-      <view class="section">手机号:</view>
-      <input type="text" class="input" name="PhoneNum" id="PhoneNum" placeholder="请输入手机号" bindinput="setPhoneNum" />
-      <button class="button" bindtap="login">登陆</button>
+      <view class="input-text">
+      <input type="text" class="input-text1" name="IDNum" id="IDNum" placeholder="身份证号" bindinput="setIDNum" />
+      </view>
+      <view class="input-text">
+      <input type="text" class="input-text1" name="PhoneNum" id="PhoneNum" placeholder="手机号" bindinput="setPhoneNum" />
+      </view>
+      <button class="button1"hover-class="mybutton-hover1" bindtap="login">登陆</button>
     </form>
-    </view>
 </view>
